# tiny-qr

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
examples/: qr-image.rs  qrencode.rs
src/: array_2d.rs  blocks.rs  buffer.rs  draw_iterator.rs  encoding.rs  error_correction.rs  format.rs  lib.rs  mask.rs  matrix.rs  qr_version.rs  qrcode.rs
